Revision history for DBIx::Class

        - Added freeze, thaw and dclone methods to Schema so that thawed
          objects will get re-attached to the schema.
        - Moved dbicadmin to JSON::Any wrapped JSON.pm for a sane API

0.08008 2007-11-16 14:30:00
        - Fixed join merging bug (test from Zby)
        - When adding relationships, it will throw an exception if you get the
          foreign and self parts the wrong way round in the condition
        - ResultSetColumn::func() now returns all results if called in list
          context; this makes things like func('DISTINCT') work as expected
        - Many-to-many relationships now warn if the utility methods would 
          clash
        - InflateColumn::DateTime now accepts an extra parameter of timezone
          to set timezone on the DT object (thanks Sergio Salvi)
        - Added sqlt_deploy_hook to result classes so that indexes can be 
          added.
        - Added startup checks to warn loudly if we appear to be running on 
          RedHat systems from perl-5.8.8-10 and up that have the bless/overload
          patch applied (badly) which causes 2x -> 100x performance penalty.
          (Jon Schutz)
        - ResultSource::reverse_relationship_info can distinguish between 
          sources using the same table
        - Row::insert will now not fall over if passed duplicate related objects
        - Row::copy will not fall over if you have two relationships to the 
          same source with a unique constraint on it

0.08007 2007-09-04 19:36:00
        - patch for Oracle datetime inflation (abram@arin.net)
        - added on_disconnect_do
        - on_connect_do and on_disconnect_do take coderefs and arrayrefs

0.08006 2007-08-12 15:12:00
        - Move to using Class::C3::Componentised
        - Remove warn statement from DBIx::Class::Row

0.08005 2007-08-06 
        - add timestamp fix re rt.cpan 26978 - no test yet but change
          clearly should cause no regressions